--- a/src/index.css
+++ b/src/index.css
@@ -11,11 +11,19 @@ body {
 	-moz-osx-font-smoothing: grayscale;
 }
 
-h1,h2,h3,h4,h5,h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
 	font-family: 'Geologica', sans-serif;
 }
 
-span,div,p,a {
+span,
+div,
+p,
+a {
 	font-family: 'Roboto', sans-serif;
 }
 
